[bdist_wheel]
universal = 1

[metadata]
name = fuzzycollections
version = 0.0.3
description = fuzzy collections
author = Dobatymo
long_description = file: readme.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/Dobatymo/fuzzycollections
classifiers =
	Intended Audience :: Developers
	License :: OSI Approved :: ISC License (ISCL)
	Operating System :: OS Independent
	Programming Language :: Python :: 3

[options]
zip_safe = True
use_2to3 = False
python_requires = >=3.6
include_package_data = True
packages =
	fuzzycollections
install_requires =
	genutility>=0.0.50
	metrictrees

[options.package_data]
fuzzycollections =
	py.typed

[options.extras_require]
all =
	jellyfish
	polyleven
dev =
	isort
