[bdist_wheel]
universal = 1

[metadata]
name = fuzzycollections
version = 0.0.4
description = fuzzy collections
author = Dobatymo
long_description = file: readme.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/Dobatymo/fuzzycollections
classifiers =
	Intended Audience :: Developers
	License :: OSI Approved :: ISC License (ISCL)
	Operating System :: OS Independent
	Programming Language :: Python :: 3

[options]
zip_safe = True
use_2to3 = False
python_requires = >=3.7
include_package_data = True
packages =
	fuzzycollections
install_requires =
	genutility>=0.0.102
	metrictrees

[options.package_data]
fuzzycollections =
	py.typed

[options.extras_require]
all =
	jellyfish
	polyleven
dev =
	isort
